# netbeat

./: .gitignore  .goreleaser.yaml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  tarpaulin-report.html
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  release-please-config.json
.github/ISSUE_TEMPLATE/: enhancement.md  question.md
.github/workflows/: ci.yml  pr_validator.yml  publish.yml  release-please.yml  upload-release-artifacts.yml
.hooks/: pre-commit
.husky/hooks/: pre-commit
src/: cli.rs  client.rs  conf.rs  lib.rs  main.rs  reports.rs  server.rs  utils.rs
src/cli/: args.rs  commands.rs  mod.rs  styles.rs
src/core/: client.rs  config.rs  mod.rs  protocol.rs  server.rs
src/output/: mod.rs  reports.rs
src/utils/: error.rs  logging.rs  mod.rs
tests/: cli_integration.rs  client_server_integration.rs  integration_tests.rs
