[package]
name = "netbeat"
version = "0.1.0"
edition = "2024"
description = "A fast, minimal, & lightweight Rust tool for testing network upload and download speeds between a client and server."

[dependencies]
anstyle = "1.0.11"
byte-unit = "5.1.6"
clap = { version = "4.5.42", features = ["derive"] }
rand = "0.9.2"
spinners = "4.1.1"
