[package]
name = "netbeat"
version = "0.1.0"
edition = "2024"
description = "A fast, minimal, & lightweight Rust tool for testing network upload and download speeds between a client and server."

[dependencies]
anstyle = "1.0.11"
anyhow = "1.0.99"
byte-unit = "5.1.6"
clap = { version = "4.5.42", features = ["derive"] }
json = "0.12.4"
rand = "0.9.2"
spinners = "4.1.1"
tabled = "0.20.0"
thiserror = "2.0.15"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin)'] }
